# ansible-collection-tailscale

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  Makefile  README.md  galaxy.yml  pyproject.toml  renovate.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: molecule.yml  pull_request.yml  pull_request_target.yml  release.yml
extensions/molecule/: DEVELOPMENT.md
extensions/molecule/args/: converge.yml  molecule.yml
extensions/molecule/default/: molecule.yml  prepare.yml
extensions/molecule/idempotent-up/: converge.yml  molecule.yml
extensions/molecule/oauth/: converge.yml  molecule.yml
extensions/molecule/role-device-args/: converge.yml  molecule.yml
extensions/molecule/role-device-default/: converge.yml  molecule.yml  prepare.yml
extensions/molecule/role-device-idempotent-up/: converge.yml  molecule.yml
extensions/molecule/role-device-oauth/: converge.yml  molecule.yml
extensions/molecule/role-device-skip-authentication/: molecule.yml
extensions/molecule/role-device-state-absent/: converge.yml  molecule.yml
extensions/molecule/role-device-state-idempotency/: converge.yml  molecule.yml
extensions/molecule/role-device-strategy-free/: converge.yml  molecule.yml
extensions/molecule/role-machine-args/: molecule.yml
extensions/molecule/role-machine-default/: molecule.yml  prepare.yml
extensions/molecule/role-machine-idempotent-up/: molecule.yml
extensions/molecule/role-machine-oauth/: molecule.yml
extensions/molecule/role-machine-reinstall/: converge.yml  (+1 more)
meta/: runtime.yml
roles/device/: Makefile  README.md
roles/ip_forwarding/: README.md
roles/machine/: Makefile  README.md
(+27 files in other folders)
